--- a/src/main/resources/static/css/h5/mobile/form.css
+++ b/src/main/resources/static/css/h5/mobile/form.css
@@ -97,12 +97,12 @@ form .mui-input-group:last-child{margin-bottom: 0;}
 .small .mui-input-row .mui-input-clear~.mui-icon-clear, .small .mui-input-row .mui-input-password~.mui-icon-eye, .small .mui-input-row .mui-input-speech~.mui-icon-speech{top: 16px;}
 .small .mui-input-group h5{padding-top: 10px;}
 /* 按钮：固定与不固定，多个选项 */
-.mui-content-padded{margin: 0; padding:80px 30px; background: #fff;}
+.mui-content-padded{margin: 0; padding:20px 30px 40px; background: #fff;}
 .mui-content-padded .btncont {display: flex;}
 .mui-btn-primary, .mui-btn-primary:visited{display: block; color: #fff;  margin: 0;padding:.2rem.4rem;border-radius:4px;background:linear-gradient(160deg, #21A3DA 40% ,#29D4BD);
     border:none;font-size: .46rem; transition: 0.5s all; -webkit-transition: 0.5s all; -o-transition: 0.5s all; -moz-transition: 0.5s all; -ms-transition: 0.5s all;
     /* box-shadow: 0 0 20px rgba(33, 162, 218, 0.66)}
-.mui-btn-primary:hover, .mui-btn-primary:active, .mui-btn-primary:focus{color: #fff; box-shadow:0 0 10px rgba(33, 162, 218, 0.33);*/} 
+.mui-btn-primary:hover, .mui-btn-primary:active, .mui-btn-primary:focus{color: #fff; box-shadow:0 0 10px rgba(33, 162, 218, 0.33);*/}
 .mui-btn-primary.no{background: none; margin-right: 10px;border: 1px solid #21A3DA; color: #21A3DA;}
 .fix.mui-content-padded{position: fixed;width: 100%; bottom: 0;left: 0; padding: 0;max-width: 768px;    max-width: 768px; z-index: 9;}
 .fix.mui-content-padded .btncont{ padding: 0;}
