--- a/src/main/resources/templates/h5/mobile/carLong/addYuezu.html
+++ b/src/main/resources/templates/h5/mobile/carLong/addYuezu.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <header class="mui-bar mui-bar-nav">
-        <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-        <h1 class="mui-title">添加月租</h1>
+    <header class="bar">
+        <div><a href="/mobile/login"><i class="iconfont icon-shouye"></i>首页</a></div>
+        <div><a href="/mobile/setting"><i class="iconfont icon-shezhi"></i>设置</a></div>
     </header>
     <div class="mui-content">
         <form id="signupForm">
@@ -20,7 +20,7 @@
                     <label>停车场</label>
                     <div style="width: 4rem;display: flex;justify-content: space-between;margin-right: 2rem;">
                         <div class="mui-radio mui-left" id="parking">
-                            <label></label>
+                            <label style="width: 5.8rem;"></label>
                             <input name="parkingId" type="radio" checked>
                         </div>
                     </div>
