--- a/src/main/resources/templates/h5/mobile/home.html
+++ b/src/main/resources/templates/h5/mobile/home.html
@@ -30,7 +30,8 @@
                 <!--支持循环，需要重复图片节点-->
                 <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="/img/h5/mobile/banner01.jpg" /></a></div>
                 <div class="mui-slider-item"><a href="#"><img src="/img/h5/mobile/banner01.jpg" /></a></div>
-                <div class="mui-slider-item"><a href="#"><img src="/img/h5/mobile/banner01.jpg" /></a></div>
+                <div class="mui-slider-item"><a href="#"><img src="/img/h5/mobile/banner02.jpg" /></a></div>
+                <div class="mui-slider-item"><a href="#"><img src="/img/h5/mobile/banner03.jpg" /></a></div>
                 <!--支持循环，需要重复图片节点-->
                 <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="/img/h5/mobile/banner01.jpg" /></a></div>
             </div>
@@ -46,7 +47,7 @@
             <a class="mui-col-xs-4" id="vipCar" ><i class="iconfont icon-shanghu"></i>VIP车辆</a>
             <a class="mui-col-xs-4" id="recharge"><i class="iconfont icon-Vip"></i>商户充值</a>
         </div>
-        <p class="list-bot">没有更多内容啦</p>
+<!--        <p class="list-bot">没有更多内容啦</p>-->
     </div>
 
 </body>
