--- a/src/main/resources/templates/h5/mobile/carVip/addVip.html
+++ b/src/main/resources/templates/h5/mobile/carVip/addVip.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <header class="mui-bar mui-bar-nav">
-        <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-        <h1 class="mui-title">添加VIP</h1>
+    <header class="bar">
+        <div><a href="/mobile/login"><i class="iconfont icon-shouye"></i>首页</a></div>
+        <div><a href="/mobile/setting"><i class="iconfont icon-shezhi"></i>设置</a></div>
     </header>
     <div class="mui-content">
         <form id="signupForm">
