--- a/src/main/resources/templates/h5/mobile/carVip/listVip.html
+++ b/src/main/resources/templates/h5/mobile/carVip/listVip.html
@@ -7,15 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="/css/h5/mobile/common.css"/>
     <style type="text/css">
-        .bar{
-            background: #eee;
-            display: flex;
-            justify-content: space-between;
-            padding: 0 .4rem;
-            height: 1.25rem;
-            line-height: 1.25rem;
-        }
-        .bar a{color: #333;}
+        body, .mui-content,.mui-table-view{background: #f8f8f8;}
     </style>
 </head>
 
@@ -95,7 +87,10 @@
                     json +=`</h3>
                             <p><span>停车场：${data.rows[i].parkingName}</span><span>车主姓名：${data.rows[i].name}</span></p>
                         </a>
-                        <i class="iconfont icon-shanchu delete" value=${data.rows[i].id}></i>
+                         <div class="btn-bot">
+                            <a href="EditYuezu.html" id="eidt"><i class="iconfont icon-edit"></i>编辑</a>
+                            <span id="delete"><i class="iconfont icon-shanchu delete" value=${data.rows[i].id}></i>删除</span>
+                        </div>
                     </li>
                 `
                 }
