--- a/src/main/resources/templates/h5/mobile/carVip/listVip.html
+++ b/src/main/resources/templates/h5/mobile/carVip/listVip.html
@@ -22,7 +22,7 @@
             <h3>VIP管理</h3>
             <h5>VIP MANAGEMENT</h5>
         </div>
-        <ul class="mui-table-view longlist" id="longList"></ul>
+        <ul class="mui-table-view" id="longList"></ul>
         <a href="/mobile/car/vip/add" class="afix" id="consolt"><i class="iconfont icon-add"></i></a>
     </div>
     <p class="list-bot">加载更多内容</p>
@@ -64,12 +64,7 @@
             url: "/sys/car/vip/list",
             dataType: "json",
             async: false,
-            data: {
-                limit: limit,
-                offset: offset,
-                sort: 'update_time',
-                order: 'desc',
-            },
+            data: {limit: limit, offset: offset, sort: 'update_time', order: 'desc'},
             type: "GET",
             success: function(data) {
                 if(data.rows.length == length) {
