--- a/src/main/resources/templates/h5/mobile/carBusiness/listShanghu.html
+++ b/src/main/resources/templates/h5/mobile/carBusiness/listShanghu.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="/css/h5/mobile/common.css"/>
     <style type="text/css">
-        body, .mui-content,.mui-table-view{background: #f8f8f8;}
+        body, .mui-content, .mui-table-view {
+            background: #f8f8f8;
+        }
     </style>
 </head>
 
