--- a/src/main/resources/templates/h5/mobile/carVip/listVip.html
+++ b/src/main/resources/templates/h5/mobile/carVip/listVip.html
@@ -22,7 +22,7 @@
             <h3>VIP管理</h3>
             <h5>VIP MANAGEMENT</h5>
         </div>
-        <ul class="mui-table-view" id="longList"></ul>
+        <ul class="mui-table-view longlist" id="longList"></ul>
         <a href="/mobile/car/vip/add" class="afix" id="consolt"><i class="iconfont icon-add"></i></a>
     </div>
     <p class="list-bot">加载更多内容</p>
@@ -38,7 +38,7 @@
                 <a id="yes">确认</a>
             </div>
         </div>
-    </div> 
+    </div>
 </body>
 <script src="/js/h5/mobile/common.js"></script>
 <script src="/js/plugins/layer/layer.min.js" th:src="@{/js/plugins/layer/layer.min.js}"></script>
