--- a/src/main/resources/templates/h5/mobile/carLong/listYuezu.html
+++ b/src/main/resources/templates/h5/mobile/carLong/listYuezu.html
@@ -7,57 +7,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="/css/h5/mobile/common.css"/>
     <style type="text/css">
-        body, .mui-content,.mui-table-view{background: #f8f8f8;}
+        body, .mui-content, .mui-table-view {
+            background: #f8f8f8;
+        }
     </style>
 </head>
 
 <body>
-    <div class="mui-content">
-        <header class="bar">
-            <div><a href="/mobile/login"><i class="iconfont icon-shouye"></i>首页</a></div>
-            <div><a href="/mobile/setting"><i class="iconfont icon-shezhi"></i>设置</a></div>
-        </header>
-        <div class="user bantop">
-            <i class="iconfont icon-yuezu"></i>
-            <h3>月租管理</h3>
-            <h5>MONTHLY RENT MANAGEMENT</h5>
-        </div>
-        <ul class="mui-table-view longlist" id="longList"></ul>
-        <a href="/mobile/car/long/add" class="afix" id="consolt"><i class="iconfont icon-add"></i></a>
+<div class="mui-content">
+    <header class="bar">
+        <div><a href="/mobile/login"><i class="iconfont icon-shouye"></i>首页</a></div>
+        <div><a href="/mobile/setting"><i class="iconfont icon-shezhi"></i>设置</a></div>
+    </header>
+    <div class="user bantop">
+        <i class="iconfont icon-yuezu"></i>
+        <h3>月租管理</h3>
+        <h5>MONTHLY RENT MANAGEMENT</h5>
     </div>
-    <p class="list-bot">加载更多内容</p>
-    <!-- 自开发弹出层：选择内容过多，需要滚动 -->
-    <div class="popup" id="popup">
-        <div class="pop-container">
-            <h3>删除</h3>
-            <div class="popcont">
-                确定要删除吗？
-            </div>
-            <div class="popbtn">
-                <a class="left cancel">取消</a>
-                <a id="yes">确认</a>
-            </div>
+    <ul class="mui-table-view longlist" id="longList"></ul>
+    <a href="/mobile/car/long/add" class="afix" id="consolt"><i class="iconfont icon-add"></i></a>
+</div>
+<p class="list-bot">加载更多内容</p>
+<!-- 自开发弹出层：选择内容过多，需要滚动 -->
+<div class="popup" id="popup">
+    <div class="pop-container">
+        <h3>删除</h3>
+        <div class="popcont">
+            确定要删除吗？
+        </div>
+        <div class="popbtn">
+            <a class="left cancel">取消</a>
+            <a id="yes">确认</a>
         </div>
     </div>
+</div>
 </body>
 <script src="/js/h5/mobile/common.js"></script>
 <script src="/js/plugins/layer/layer.min.js" th:src="@{/js/plugins/layer/layer.min.js}"></script>
 <script>
     $(function () {
-        limit = 5 ;
-        offset = 0 ;
-        length = 0 ;
-        list(limit, offset) ;
+        limit = 5;
+        offset = 0;
+        length = 0;
+        list(limit, offset);
         bind();
         remove();
         listAdd(limit, offset);
-    }) ;
+    });
 
-    function listAdd(limit,offset) {
+    function listAdd(limit, offset) {
         $(".list-bot").click(function () {
-            limit = limit + 5 ;
+            limit = limit + 5;
             list(limit, offset)
-        }) ;
+        });
     }
 
     function list(limit, offset) {
@@ -73,8 +75,8 @@
             },
             type: "GET",
             success: function (data) {
-                if(data.rows.length == length) {
-                    $(".list-bot").off("click") ;
+                if (data.rows.length == length) {
+                    $(".list-bot").off("click");
                     $(".list-bot").text("没有更多内容啦")
                     layer.msg("无更多内容");
                 }
@@ -97,7 +99,7 @@
                 `
                 }
                 $("#longList").html(json);
-                length = data.rows.length ;
+                length = data.rows.length;
             },
         });
     }
@@ -106,19 +108,19 @@
         $(".delete").click(function () {
             $("#popup").fadeIn();
             $("body").css("overflow", "hidden");
-            $("#yes").attr("value",$(this).attr("value")) ;
+            $("#yes").attr("value", $(this).attr("value"));
         });
     }
 
     function remove() {
         $("#yes").click(function () {
-            $.post("/sys/car/business/remove",{id:$(this).attr("value")},function (data) {
-                if(data.code == 0){
+            $.post("/sys/car/business/remove", {id: $(this).attr("value")}, function (data) {
+                if (data.code == 0) {
                     window.location.reload();
-                }else {
+                } else {
                     layer.msg(data.msg);
                 }
-            },"json");
+            }, "json");
         });
     }
 </script>
