页面添加编辑

--- a/src/main/resources/templates/h5/mobile/carBusiness/listShanghu.html
+++ b/src/main/resources/templates/h5/mobile/carBusiness/listShanghu.html
@@ -91,7 +91,7 @@
                             <p>停车场：${data.rows[i].parkingName}</p>
                         </a>
                         <div class="btn-bot">
-                            <a href="EditYuezu.html" id="eidt"><i class="iconfont icon-edit"></i>编辑</a>
+                            <a href="/mobile/car/business/edit/${data.rows[i].id}" id="eidt"><i class="iconfont icon-edit"></i>编辑</a>
                             <span id="delete"><i class="iconfont icon-shanchu delete" value=${data.rows[i].id}></i>删除</span>
                         </div>
                     </li>
