--- a/src/main/resources/templates/h5/mobile/carVip/listVip.html
+++ b/src/main/resources/templates/h5/mobile/carVip/listVip.html
@@ -83,7 +83,7 @@
                             <p><span>停车场：${data.rows[i].parkingName}</span><span>车主姓名：${data.rows[i].name}</span></p>
                         </a>
                          <div class="btn-bot">
-                            <a href="EditYuezu.html" id="eidt"><i class="iconfont icon-edit"></i>编辑</a>
+                            <a href="/mobile/car/vip/edit/${data.rows[i].id}" id="eidt"><i class="iconfont icon-edit"></i>编辑</a>
                             <span id="delete"><i class="iconfont icon-shanchu delete" value=${data.rows[i].id}></i>删除</span>
                         </div>
                     </li>
