--- a/src/main/resources/templates/system/business/add.html
+++ b/src/main/resources/templates/system/business/add.html
@@ -22,8 +22,8 @@
 							<div class="form-group">
 								<label class="col-sm-3 control-label">商户类型：</label>
 								<div class="col-sm-8">
-									<label><input id="type" name="type" value="1" type="radio" checked>普通商户</label>
-									<label><input id="type" name="type" value="2" type="radio">时长劵商户</label>
+									<label><input name="type" value="1" type="radio" checked>普通商户</label>
+									<label><input name="type" value="2" type="radio">时长劵商户</label>
 								</div>
 							</div>
 							<div class="form-group">
